WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216870
The wheel event phases of FrameView is not correct
https://bugs.webkit.org/show_bug.cgi?id=216870
Summary
The wheel event phases of FrameView is not correct
cathiechen
Reported
2020-09-23 02:30:30 PDT
This bug is split from 216609
Attachments
Patch
(3.05 KB, patch)
2020-09-23 02:36 PDT
,
cathiechen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
cathiechen
Comment 1
2020-09-23 02:36:25 PDT
Created
attachment 409454
[details]
Patch
EWS
Comment 2
2020-09-23 05:18:04 PDT
Committed
r267469
: <
https://trac.webkit.org/changeset/267469
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409454
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-23 05:19:15 PDT
<
rdar://problem/69429980
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug